style home page and add padding to bottom footer

--- a/members_signup/templates/registration/create_user_page.html
+++ b/members_signup/templates/registration/create_user_page.html
@@ -14,7 +14,12 @@
        </div>
 
 {% else %}
-       Please register now or Login
+<div class="not-allowed">
+       <div class="not-loggedin">
+              <p>Please register now or Login</p>
+       </div>
+
+</div>
        
 {% endif %}
 {% endblock %}
