--- a/members_signup/templates/registration/change_password.html
+++ b/members_signup/templates/registration/change_password.html
@@ -3,13 +3,21 @@
 
 {% block content %}
 
-<h1> Change Password</h1>
 <br/><br/>
-<div class="mb-3">
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-secondary">Change Password</button>
+<div class="forms-1">
+    <div class="form-box-2">
+        <h1 class="page-title"> Change Password</h1>
+        <div class="mb-3">
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <div class="form-btn">
+                    <button class="btn btn-secondary">Change Password</button>
+                </div>
+            </form>
+        </div>
     </div>
+</div>
 
 {% endblock %}
+
