--- a/members_signup/templates/registration/edit_profile.html
+++ b/members_signup/templates/registration/edit_profile.html
@@ -3,17 +3,20 @@
 
 {% block content %}
 
-<h1> Edit Account</h1>
-<br/><br/>
-
-{{ user.profile.bio }}
 
 <br><br/>
-<div class="mb-3">
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-secondary">Update</button>
+<div class="forms">
+    <div class="form-box">
+        <h1 class="page-title"> Edit Account</h1>
+        <div class="mb-3">
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <div class="form-btn">
+                    <button class="btn btn-secondary">Update</button>
+                </div>
+            </form>
+        </div>
     </div>
-
+</div>
 {% endblock %}
