--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -28,58 +28,64 @@
 
   </head>
   
-  <body>
-   <main>
-      <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-logo" href="{% url 'index' %}">Travel Leap</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'post' %}">Post your message</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'create_category' %}">Create New Category</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'register' %}">Register</a>
-              </li>
-              {% if user.is_authenticated %}
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        {{ user.first_name }} {{ user.last_name }}</a>
-                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuLink">
-                            <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Account Settings</a></li>
-                            
-                          {% if user.profile.id %}
-                                
-                                <li><a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Profile Page</a></li>
-                              {% else %}
-                                <li><a class="dropdown-item" href="{% url 'create_profile_page' %}">Create Profile</a></li>
-                            {% endif %}
-                                <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a>    
-                            </ul>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'login' %}">Login</a>
-                          </li>
-              {% endif %}
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </main>
-  </body>
+  <body class="d-flex flex-column">
 
+    <!--Nav Bar-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-logo" href="{% url 'index' %}">What a Trip</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item px-2">
+              <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+            </li>
+            
+            <li class="nav-item px-2">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            {% if user.is_authenticated %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                {{ user.first_name }} {{ user.last_name }}</a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Account Settings</a></li>
+                {% if user.profile.id %}
+                <li><a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Profile Page</a></li>
+                {% else %}
+                <li><a class="dropdown-item" href="{% url 'create_profile_page' %}">Create Profile</a></li>
+                {% endif %}
+                <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login' %}">Login</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'register' %}">Register</a></li>
+              </ul>
+            </li>
+            {% endif %}
+          </ul>
+          
+        </div>
+        <div class="social-media-links">
+          <a href="https://facebook.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+          <a href="https://instagram.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+    
+        </div>
+      </div>
+    </nav>
+
+    <footer class="navbar fixed-bottom navbar-light bg-light">
+      <div class="container-fluid">
+        <div class="container">
+          <span class="logo-bttm">Designed by Arthur Neto &copy;2022. All rights reserved</span>
+        </div>
+      </div>
+    </footer>
+  </body>
   {% block content %}
- 
- {% endblock %}
- 
+  {% endblock %}
    <!-- Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </html>
-{% include "footer.html" %}
