--- a/world/templates/comments_box.html
+++ b/world/templates/comments_box.html
@@ -4,17 +4,28 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-        <h1> Comment section </h1>
-        <br/><br/>
-        <div class="mb-3">
-              <form method="POST">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button class="btn btn-secondary">Comment</button>
+ <div class="forms">
+       <div class="form-box">
+              <h1 class="page-title"> Comment section </h1>
+              <br /><br />
+              <div class="mb-3">
+                     <form method="POST">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <div class="form-btn">
+                                   <button class="btn btn-secondary">Comment</button>
+                            </div>
+                     </form>
+              </div>
        </div>
+ </div>
 
 {% else %}
-       Please register now or Login
+<div class="not-allowed">
+       <div class="not-loggedin">
+              <p>Please register now or Login</p>
+       </div>
+</div>
        
 {% endif %}
 {% endblock %}
