--- a/world/templates/post.html
+++ b/world/templates/post.html
@@ -4,22 +4,33 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-        <h1> Blogging with me</h1>
-        <br/><br/>
-        <div class="mb-3">
-              <form method="POST" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{ form.media }}
-                {{ form.as_p }}
-                <button class="btn btn-secondary">Post</button>
+<div class="forms">
+       <div class="form-box">
+              <h1 class="page-title"> Blogging with me</h1>
+              <div class="mb-3">
+                     <form method="POST" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            {{ form.media }}
+                            {{ form.as_p }}
+                            <div class="form-btn">
+                                   <button class="btn btn-secondary">Post</button>
+                            </div>
+                     </form>
+              </div>
        </div>
+</div>
 <!---Function script to display restriction to Post Author-->
        <script>
               var name = "{{ user.id }}";
               document.getElementById("user").value = name;
        </script>
 {% else %}
-       Please register now or Login
+<div class="not-allowed">
+       <div class="not-loggedin">
+              <p>Please register now or Login</p>
+       </div>
+
+</div>
        
 {% endif %}
 {% endblock %}
