--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -7,7 +7,7 @@
   <div class="container my-3 my-sm-5">
     <div class="row">
         <div class="col-12 col-md-6 col-lg-8">
-            <h2 class="mb-3">{{ post.title }}</h2>
+            <h2 class="mb-3 text-center">{{ post.title }}</h2>
             
             <article class="mb-3">
                 {% if "placeholder" in post.header_img.url %}
@@ -23,13 +23,29 @@
                         <div class="small">Posted on: {{ post.publish_date }}</div>
                     </div>
                 </header>
-                <p><p class="lead">{{ post.body|safe }}</p></p>
+                <p class="lead">{{ post.body|safe }}</p>
                 {% if user.is_authenticated %}
                     {% if user.id == post.author.id %}
                     <ul class="post-tag list-inline">
-                        <li class="list-inline-item"><i class="fa fa-pencil"></i><a href="{% url 'update_post' post.pk %}">Edit</a></li>
-                        <li class="list-inline-item"><i class="fa fa-trash-o"></i><a href="{% url 'post_delete' post.pk %}">Delete</a></li>
-                    </ul>
+                        <li class="list-inline-item"><i class="fa fa-pencil"></i><a href="{% url 'update_post' post.pk %}" class="scmedia">Edit</a></li>
+                        <li class="list-inline-item"><i class="fa fa-trash-o"></i><a href="{% url 'post_delete' post.pk %}" class="scmedia">Delete</a></li>
+                        <div class="like-media">
+                            <form action="{% url 'post_like' post.pk %}" method="POST">
+                            {% csrf_token %}
+                            {% if user.is_authenticated %}
+                            {% if liked %}
+                            <button type="submit" name="post_id" value="{{ post.id }}" class="btn btn-danger btn-sm like-btn"><i class="fa fa-thumbs-o-up"></i>
+                            {{ total_likes }}</button>
+                            {% else %}
+                            <button type="submit" name="post_id" value="{{ post.id }}" class="btn  btn-secondary btn-sm like-btn"><i class="far fa-heart"></i>
+                            {{ total_likes }}</button>
+                            {% endif %}
+                            {% else %}
+                            <small><i class="far fa-heart"></i> <a href="{% url 'login' %}"
+                            class="login-btn">Login</a> to like</small>
+                            {% endif %}
+                           </form>
+                        </div>
                     {% endif %}
                 {% endif %}
             </article>
@@ -65,20 +81,6 @@
                           </div>
                   </div>
               </header>
-              <figure class="figure">
-                  <img src="images/cookies.jpg"class="figure-img img-fluid"alt="">
-                  <figcaption class="figure-caption small">
-                      <p class="mb-0">
-                          <i class="fas fa-utensils"aria-hidden="true">
-
-                          </i>
-                          <span class="sr-only">made by:</span>
-                          Chef Name
-                      </p>
-                  </figcaption>
-              </figure>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae doloremque officiis nemo rem, quia reiciendis quasi harum qui temporibus! Laboriosam.</p>
-              <a href=""class="btn main-btn">Read More..</a>
           </article>
          
          
@@ -122,23 +124,25 @@
       
     </div>
   
-  <h2 class="mb-3">Categories</h2>
+  <h2 class="mb-3 p-2 text-center">Categories</h2>
   <div class="list-group mb-3">
-      
+      <div class="list-category">
       {% for item in caty_menu %}
       <a href="{% url 'category' item %}"class="list-group-item list-group-item-action text-black bg-light">
           <li class="fas fa-apple-alt">{{ item }}</li>
       </a>
       {% endfor %}
+    </div>
   </div>
   <!---About the Blog-->
   
   <div class="card mb-3">
       <div class="card-body">
           <h5 class="card-title">About the Blog</h5>
-          <p class="card-text main-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis beatae minima quasi, quidem nobis, placeat molestiae ullam rem quia perferendis expedita inventore, error animi ut.
-              <a href="">Read more..</a>
-          </p>
+          <p class="card-text main-title">I always thought about what it would be like to travel the world or live traveling, exploring every corner of the planet, without being stuck in an office.</p>
+          <p>And I've always had some dream destinations, places I've dreamed or dreamed of going to since I was a child, but I confess that I've spent a good part of my life living the dreams of others,</p>
+           <p>getting to know the favorite destinations of other destinations. This blog you also help you with your dreams.</p>
+          
       </div>
   </div>
 </aside>
