--- a/world/templates/category.html
+++ b/world/templates/category.html
@@ -51,7 +51,7 @@
 <div class="not-allowed">
     <div class="not-loggedin">
            <p>This category has no posts.</p>
-           <p><a href="{% url 'add-post' %}">Add one</a></p>
+           <p><a href="{% url 'post' %}">Add one</a></p>
     </div>
 
 </div>
