--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -42,11 +42,13 @@
             <li class="nav-item px-2">
               <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
             </li>
-            
-            <li class="nav-item px-2">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
             {% if user.is_authenticated %}
+            <li class="nav-item px-2">
+              <a class="nav-link active" aria-current="page" href="{% url 'post' %}">Add Post</a>
+            </li>
+            <li class="nav-item px-2">
+              <a class="nav-link active" aria-current="page" href="{% url 'create_category' %}">New Category</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 {{ user.first_name }} {{ user.last_name }}</a>
