--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -30,7 +30,7 @@
                         <li class="list-inline-item"><i class="fa fa-pencil"></i><a href="{% url 'update_post' post.pk %}" class="scmedia">Edit</a></li>
                         <li class="list-inline-item"><i class="fa fa-trash-o"></i><a href="{% url 'post_delete' post.pk %}" class="scmedia">Delete</a></li>
                     {% endif %}
-                    <div class="list-inline-item">
+                    <div class="list-inline-item p-5">
                         <form action="{% url 'post_like' post.pk %}" method="POST">
                         {% csrf_token %}
                         {% if user.is_authenticated %}
@@ -55,13 +55,13 @@
         <!--Asides Section-->
 <div class="col-12 col-md-6 p-5 col-lg-4">
 <aside>
-  <!---Recent Posts-->
+  <!---Side Column-->
   <div class="list-group mb-3 p-2">
     <div class="card" style="width: 400px p-2">
         {% if post.author.profile.profile_picture %}
-        <img src="{{post.author.profile.profile_picture.url}}" alt="profile pic">
+         <img src="{{post.author.profile.profile_picture.url}}" alt="profile pic">
         {% else %}
-        <img src="{% static 'profilepicture.jpg' %}" alt="profile pic">
+         <img src="{% static 'profilepicture.jpg' %}" alt="profile pic">
         {% endif %}
         <div class="card-body">
             <h5 class="card-title">{{ post.author.first_name }} {{ post.author.last_name}}</h5>
@@ -113,9 +113,9 @@
 </aside>
 </div>
 
-  
+  <div class="comment-bttm-box">
     <div class="container mt-5">
-        <h2>Comments</h2>
+        <h2 class="comment-header p-3">Comments</h2>
         <br/>
     {% if not post.comments.all %}
     No Comment Yet <a href ="{% url 'add_your_comments' post.pk %}"> Add comment</a>
