--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -6,112 +6,114 @@
 
 <div class="main-base">
 
-    <div class="banner">
+  <div class="banner">
 
-        <div class="banner-image"></div>
+    <div class="image-banner">
 
-        <div class="banner-body">
+    </div>
 
-            <div class="container-lg">
+    <div class="container-fluid">
 
-                <div class="row">
+      <div class="row">
 
-                    <div class="col-12 mt-3 left">
+        <!-- Blog Entries Column -->
 
-                        <div class="row">
+        <div class="col-12 mt-3 left">
 
-                            {% for post in object_list %}
+          <div class="row">
 
-                            <div class="col-md-4">
+            {% for post in post_list %}
 
-                                <div class="card mb-4 border-0">
+            <div class="col-md-4">
 
-                                    <div class="card-body">
+              <div class="card mb-4">
 
-                                        <div class="image-container">
+                <div class="card-body md">
 
-                                            {% if "placeholder" in post.header_img.url %}
+                  <div class="image-container">
 
-                                             <img class="card-img-top" src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg" alt="post-picture">
+                    {% if "placeholder" in post.header_img.url %}
 
-                                            {% else %}
+                    <img class="card-img-top" src="https://codeinstitute.s3.amazonaws.com/fullstack/blog/default.jpg">
 
-                                             <img class="card-img-top" src=" {{ post.header_img.url  }}" alt="post-picture">
+                    {% else %}
 
-                                            {% endif %}
+                    <img class="card-img-top" src=" {{ post.header_img.url  }}" alt="post-picture">
 
-                                        </div>
+                    {% endif %}
 
-                                        <a href="{% url 'details_article' post.pk  %}" class="post-link">
+                    <a href="{% url 'details_article' post.pk  %}" class="post-link">
 
-                                            <h2 class="card-title">{{ post.title }}</h2>
+                      <h2 class="card-title">{{ post.title }}</h2>
 
-                                        </a>
+                    </a>
 
-                                        <div class="image-flash">
+                    <div class="image-flash">
 
-                                            <p class="author">Author: {{ post.author }}</p>
-                                            <p class="text-center text-muted h7">Posted on: {{ post.publish_date}}</p>
+                      <p class="author">Author: {{ post.author }}</p>
 
-                                            <p class="card-text">{{ post.body|slice:":200"|safe }}</p>
-
-
-                                        </div>
-
-                                        <hr />
-                                        <div class="d-flex justify-content-center">
-                                        <a href="{% url 'details_article' post.pk  %}" class="btn btn-primary">View Article</a>
-                                        
-                                        </div>
-                                    </div>
-
-                                </div>
-
-                            </div>
-
-                            {% endfor %}
-                        </div>
+                      <p class="card-text text-muted h6">{{ post.body|slice:":200"|safe }}</p>
 
                     </div>
+
+                  </div>
+
+                  <hr />
+
+                  <p class="card-text text-muted h6">{{ post.publish_date}}</p>
 
                 </div>
 
+              </div>
 
-                {% if is_paginated %}
-
-                <nav aria-label="Page navigation">
-
-                    <div class="pagination">
-
-                        {% if page_obj.has_previous %}
-
-                        <a href="?page={{ page_obj.previous_page_number }}" class="bottom-link">
-
-                            &laquo; Newer Posts </a>
-
-                        {% endif %}
-
-                        {% if page_obj.has_next %}
-
-                        <a href="?page={{ page_obj.next_page_number }}" class="bottom-link"> Older
-
-                            Posts &raquo; </a>
-
-                        {% endif %}
-
-                    </div>
-
-                </nav>
-
-                {% endif %}
-                
             </div>
 
+            {% if forloop.counter|divisibleby:3 %}
+
+          </div>
+
+          <div class="row">
+
+            {% endif %}
+
+            {% endfor %}
+
+
+          </div>
+
         </div>
-        
+
+      </div>
+
+      {% if is_paginated %}
+
+      <nav aria-label="Page navigation">
+
+        <ul class="pagination justify-content-center">
+
+          {% if page_obj.has_previous %}
+
+          <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+
+          {% endif %}
+
+          {% if page_obj.has_next %}
+
+          <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+
+
+          {% endif %}
+
+        </ul>
+
+      </nav>
+
+      {% endif %}
+
     </div>
+
+  </div>
 
 </div>
 
-
-{% endblock %}
+{%endblock%}
