--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -44,29 +44,35 @@
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item px-2">
-              <a class="nav-link active" aria-current="page" href="{% url 'post' %}">Add Post</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'post' %}">Post Your Message</a>
             </li>
             <li class="nav-item px-2">
-              <a class="nav-link active" aria-current="page" href="{% url 'create_category' %}">New Category</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'create_category' %}">Add Category</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 {{ user.first_name }} {{ user.last_name }}</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Account Settings</a></li>
                 {% if user.profile.id %}
+  
                 <li><a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Profile Page</a></li>
-                {% else %}
-                <li><a class="dropdown-item" href="{% url 'create_profile_page' %}">Create Profile</a></li>
-                {% endif %}
-                <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
-                {% else %}
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login' %}">Login</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'register' %}">Register</a></li>
-              </ul>
-            </li>
-            {% endif %}
-          </ul>
+              <li><a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile</a></li>
+              {% else %}
+              <li><a class="dropdown-item" href="{% url 'create_profile_page' %}">Create Profile</a></li>
+              {% endif %}
+              <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+              {% else %}
+              <li class="nav-item"><a class="nav-link active" aria-current="page"
+                  href="{% url 'register' %}">Register</a></li>
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'login' %}">Login</a>
+              </li>
+ 
+            </ul>
+          </li>
+          {% endif %}
+
           
         </div>
         <div class="social-media-links">
