--- a/world/templates/create_category.html
+++ b/world/templates/create_category.html
@@ -4,28 +4,30 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-<div class="forms-cat">
-       <div class="form-box-1">
-              <h2 class="page-title"> New Blog Category</h2>
-              <div class="mb-3">
-                     <form method="POST">
-                            {% csrf_token %}
-                            {{ form.as_p }}
-                            <div class="form-btn">
-                                   <button class="btn btn-secondary">Post</button>
-                            </div>
-                     </form>
+<div class="backgr-ct">
+       <div class="forms-cat">
+              <div class="form-box-1">
+                     <h2 class="page-title"> New Blog Category</h2>
+                     <div class="mb-3">
+                            <form method="POST">
+                                   {% csrf_token %}
+                                   {{ form.as_p }}
+                                   <div class="form-btn">
+                                          <button class="btn-category">Post</button>
+                                   </div>
+                            </form>
+                     </div>
               </div>
        </div>
-</div>
-{% else %}
-<div class="not-allowed">
-       <div class="not-loggedin">
-              <p>Please register now or Login</p>
+
+       {% else %}
+       <div class="not-allowed">
+              <div class="not-loggedin">
+                     <p>Please register now or Login</p>
+              </div>
+
        </div>
 
+ {% endif %}
 </div>
-       
-{% endif %}
-
 {% endblock %}
