--- a/world/templates/comments_box.html
+++ b/world/templates/comments_box.html
@@ -2,18 +2,27 @@
 {% block title%} Comment Section {% endblock%}
 
 {% block content %}
-
+<div class="comment-bgd">
 {% if user.is_authenticated %}
  <div class="forms">
        <div class="form-box">
-              <h1 class="page-title"> Comment section </h1>
+              <h1 class="comment-title"> Comment section </h1>
               <br /><br />
               <div class="mb-3">
                      <form method="POST">
                             {% csrf_token %}
-                            {{ form.as_p }}
+                            <div class="control">
+                                   <label for="text"> Username</label>
+                                   <input type="text" class="form-control" id="text" aria-describedby="text" name="username">
+                            </div>
+                            <div class="control">
+                                   <label for="id_body">Body:</label>
+                            </div>
+                            <div class="control">
+                              <textarea name="body" cols="40" rows="10" class="form-control" required="" id="id_body" control-id="ControlID-2"></textarea>
+                            </div>
                             <div class="form-btn">
-                                   <button class="btn btn-secondary">Comment</button>
+                                   <button class="btn secondary">Comment</button>
                             </div>
                      </form>
               </div>
@@ -26,6 +35,6 @@
               <p>Please register now or Login</p>
        </div>
 </div>
-       
+</div>
 {% endif %}
 {% endblock %}
