--- a/static/css/style.css
+++ b/static/css/style.css
@@ -442,6 +442,11 @@ label {
 }
 
 /*Add a Post*/
+
+.bact-img {
+    background-image: linear-gradient(to right top, #e7e1de, #d9d0ce, #cbbfbf, #bcafb1, #ad9fa4);
+}
+
 .page-title {
     padding-top: 1rem;
     text-align: center;
@@ -457,7 +462,7 @@ label {
     padding: 1rem 16rem;
 }
 
-.form-box {
+.container-post-box {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     padding: 1.5rem;
 }
