--- a/static/css/style.css
+++ b/static/css/style.css
@@ -300,6 +300,8 @@ body {
 label {
     color: #fff;
     font-weight: 500;
+    padding-bottom: 0.3rem;
+    text-transform: capitalize;
 }
 
 
@@ -444,19 +446,19 @@ label {
 /*Add a Post*/
 
 .bact-img {
+
     background-image: linear-gradient(to right top, #e7e1de, #d9d0ce, #cbbfbf, #bcafb1, #ad9fa4);
 }
 
 .page-title {
-    padding-top: 1rem;
+    text-transform: uppercase;
+    font-size: 2em;
     text-align: center;
+    margin-bottom: 2em;
+    color: #fff;
 }
 
-label {
-    color: #000;
-    padding-bottom: 0.3rem;
-    
-}
+
 
 .forms {
     padding: 1rem 16rem;
@@ -467,14 +469,18 @@ label {
     padding: 1.5rem;
 }
 
-#cke_id_body {
-    max-width: 700px;
+#id_header_img {
+   font-weight: 700;
 }
+
 
 .form-btn {
     text-align: center;
+    
 }
-
+.btn-secondary {
+    color: #535768;
+}
 .form-btn button {
     padding: 0.3rem 2rem;
 }
